[gd_scene load_steps=112 format=3 uid="uid://dpbhi8obrljgs"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_02/actividad_04.gd" id="1_pvae5"]
[ext_resource type="Texture2D" uid="uid://fgo5181h08n8" path="res://img/nucleo_02/actividad_04/googlIA.png" id="2_c64mc"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="3_mcmjx"]
[ext_resource type="Texture2D" uid="uid://c2fwkslpwoljw" path="res://img/sprites/tapa.jpg" id="3_vqexg"]
[ext_resource type="Texture2D" uid="uid://bn4sjamrt10kt" path="res://img/barra de carga/carga_1.png" id="4_1gbjx"]
[ext_resource type="PackedScene" uid="uid://sxca04083gd4" path="res://scenes/titila.tscn" id="4_mv8c7"]
[ext_resource type="Texture2D" uid="uid://d1nol2ggfh81o" path="res://img/barra de carga/carga_2.png" id="5_b63mk"]
[ext_resource type="Texture2D" uid="uid://bgl7wwqf36n1y" path="res://img/barra de carga/carga_3.png" id="6_etbfs"]
[ext_resource type="Texture2D" uid="uid://hlskrff200g4" path="res://img/barra de carga/carga_4.png" id="7_3pavd"]
[ext_resource type="Texture2D" uid="uid://dkuejfta2yyk4" path="res://img/barra de carga/carga_5.png" id="8_juxsq"]
[ext_resource type="Texture2D" uid="uid://bqqc1iog0jch3" path="res://img/barra de carga/carga_6.png" id="9_y3165"]
[ext_resource type="Texture2D" uid="uid://boeqn4ydi6kl" path="res://img/barra de carga/carga_7.png" id="10_ogu2j"]
[ext_resource type="Texture2D" uid="uid://dx64g5yx8lwvj" path="res://img/barra de carga/carga_8.png" id="11_4ngbo"]
[ext_resource type="Texture2D" uid="uid://ggjj77exrb6" path="res://img/barra de carga/carga_9.png" id="12_w8iey"]
[ext_resource type="Texture2D" uid="uid://bhb3pqljbnvnq" path="res://img/barra de carga/carga_10.png" id="13_ugm63"]
[ext_resource type="Texture2D" uid="uid://bqi780s10a0qn" path="res://img/barra de carga/carga_11.png" id="14_jabtp"]
[ext_resource type="Texture2D" uid="uid://bkngre40e34r8" path="res://img/barra de carga/carga_12.png" id="15_58x8u"]
[ext_resource type="Texture2D" uid="uid://bu2hyiwx372kh" path="res://img/barra de carga/carga_13.png" id="16_astjr"]
[ext_resource type="Texture2D" uid="uid://t3k0dmvkh6p" path="res://img/barra de carga/carga_14.png" id="17_ve613"]
[ext_resource type="Texture2D" uid="uid://la2n00wq2xj8" path="res://img/barra de carga/carga_15.png" id="18_lda05"]
[ext_resource type="Texture2D" uid="uid://blk6lyl0ux4r" path="res://img/barra de carga/carga_16.png" id="19_mn86r"]
[ext_resource type="Texture2D" uid="uid://daj5w2kplradp" path="res://img/barra de carga/carga_17.png" id="20_ectjm"]
[ext_resource type="Texture2D" uid="uid://brjih5tcp3kqk" path="res://img/barra de carga/carga_18.png" id="21_4d1t1"]
[ext_resource type="Texture2D" uid="uid://lvl3bvspxg3w" path="res://img/barra de carga/carga_19.png" id="22_a4mr6"]
[ext_resource type="Texture2D" uid="uid://c3j7wytpox2fb" path="res://img/barra de carga/carga_20.png" id="23_2e147"]
[ext_resource type="Texture2D" uid="uid://bbghgt8rjtox3" path="res://img/barra de carga/carga_21.png" id="24_tn6x6"]
[ext_resource type="Texture2D" uid="uid://crrxwtan08lvf" path="res://img/barra de carga/carga_22.png" id="25_quppm"]
[ext_resource type="Texture2D" uid="uid://c6d411skg8oc2" path="res://img/barra de carga/carga_23.png" id="26_1vb5q"]
[ext_resource type="Texture2D" uid="uid://cbjgdoj0nrg5v" path="res://img/barra de carga/carga_24.png" id="27_v5ct4"]
[ext_resource type="Texture2D" uid="uid://ca41w7p77q80r" path="res://img/barra de carga/carga_25.png" id="28_c5yar"]
[ext_resource type="Texture2D" uid="uid://di2acjx7ne1di" path="res://img/barra de carga/carga_26.png" id="29_o61jg"]
[ext_resource type="Texture2D" uid="uid://did527cvud87u" path="res://img/barra de carga/carga_27.png" id="30_1rghs"]
[ext_resource type="Texture2D" uid="uid://dg8u7fqb2ef4d" path="res://img/barra de carga/carga_28.png" id="31_kvxyo"]
[ext_resource type="Texture2D" uid="uid://b78r5i7tw3wa4" path="res://img/barra de carga/carga_29.png" id="32_8l6ly"]
[ext_resource type="Texture2D" uid="uid://7gyirb6p54hs" path="res://img/barra de carga/carga_30.png" id="33_2ky5g"]
[ext_resource type="Texture2D" uid="uid://dlrxdh0lr6bhb" path="res://img/barra de carga/carga_31.png" id="34_gmqqi"]
[ext_resource type="Texture2D" uid="uid://dr5lodr04ydnq" path="res://img/barra de carga/carga_32.png" id="35_iyd2t"]
[ext_resource type="Texture2D" uid="uid://b8nm415cgoux5" path="res://img/barra de carga/carga_33.png" id="36_0bmjw"]
[ext_resource type="Texture2D" uid="uid://carrrllnfqbpu" path="res://img/barra de carga/carga_34.png" id="37_lclay"]
[ext_resource type="Texture2D" uid="uid://cy4r7fsi1726n" path="res://img/barra de carga/carga_35.png" id="38_vhdt4"]
[ext_resource type="Texture2D" uid="uid://cskllcotjqgsy" path="res://img/barra de carga/carga_36.png" id="39_mv3qk"]
[ext_resource type="Texture2D" uid="uid://bryijgvjpvtxm" path="res://img/barra de carga/carga_37.png" id="40_x6hcm"]
[ext_resource type="Texture2D" uid="uid://drvml4n5akqrj" path="res://img/barra de carga/carga_38.png" id="41_v0qyk"]
[ext_resource type="Texture2D" uid="uid://cwqayqyf87unl" path="res://img/barra de carga/carga_39.png" id="42_u76mq"]
[ext_resource type="Texture2D" uid="uid://b2ie215t6vw6q" path="res://img/barra de carga/carga_40.png" id="43_8ggaa"]
[ext_resource type="Texture2D" uid="uid://d04jr2n0phgep" path="res://img/barra de carga/carga_41.png" id="44_mjcae"]
[ext_resource type="Texture2D" uid="uid://qu7g0mcxwood" path="res://img/barra de carga/carga_42.png" id="45_wdlwm"]
[ext_resource type="Texture2D" uid="uid://8gf682vi5xm0" path="res://img/barra de carga/carga_43.png" id="46_msce3"]
[ext_resource type="Texture2D" uid="uid://bfbk5iy8xwqpu" path="res://img/barra de carga/carga_44.png" id="47_f8uvg"]
[ext_resource type="Texture2D" uid="uid://cthli8mgeb0tn" path="res://img/barra de carga/carga_45.png" id="48_mycib"]
[ext_resource type="Texture2D" uid="uid://b66dn0va4h3it" path="res://img/barra de carga/carga_46.png" id="49_a6d75"]
[ext_resource type="Texture2D" uid="uid://dtwx22vjxhwhv" path="res://img/barra de carga/carga_47.png" id="50_a7gqw"]
[ext_resource type="Texture2D" uid="uid://dmuq0n7pa36hv" path="res://img/barra de carga/carga_48.png" id="51_mk0yp"]
[ext_resource type="Texture2D" uid="uid://bcg506yk23roy" path="res://img/barra de carga/carga_49.png" id="52_56542"]
[ext_resource type="Texture2D" uid="uid://d1unfhdwtk2wk" path="res://img/barra de carga/carga_50.png" id="53_0rwxd"]
[ext_resource type="Texture2D" uid="uid://by4h0reia8ib8" path="res://img/barra de carga/carga_51.png" id="54_x1xeb"]
[ext_resource type="Texture2D" uid="uid://br37ydoayw40" path="res://img/barra de carga/carga_52.png" id="55_7q6ue"]
[ext_resource type="Texture2D" uid="uid://di7wutgi2tih3" path="res://img/barra de carga/carga_53.png" id="56_axha3"]
[ext_resource type="Texture2D" uid="uid://djldljoh0uv6l" path="res://img/barra de carga/carga_54.png" id="57_nc14i"]
[ext_resource type="Texture2D" uid="uid://bt4ph7f51xfub" path="res://img/barra de carga/carga_55.png" id="58_fdtqj"]
[ext_resource type="Texture2D" uid="uid://c2ckrmxpe40hk" path="res://img/barra de carga/carga_56.png" id="59_6hcph"]
[ext_resource type="Texture2D" uid="uid://cq3oliyreswql" path="res://img/barra de carga/carga_57.png" id="60_08kph"]
[ext_resource type="Texture2D" uid="uid://cw772lpggy5m1" path="res://img/barra de carga/carga_58.png" id="61_lxbdx"]
[ext_resource type="Texture2D" uid="uid://osebfvbs0x24" path="res://img/barra de carga/carga_59.png" id="62_8q5uf"]
[ext_resource type="Texture2D" uid="uid://c8h8wf8vyub6c" path="res://img/barra de carga/carga_60.png" id="63_e5qwa"]
[ext_resource type="Texture2D" uid="uid://crx2ig55i5myl" path="res://img/barra de carga/carga_61.png" id="64_h3b8i"]
[ext_resource type="Texture2D" uid="uid://bd1iqiy1urgp" path="res://img/barra de carga/carga_62.png" id="65_upayt"]
[ext_resource type="Texture2D" uid="uid://sf2hov6rsq0r" path="res://img/barra de carga/carga_63.png" id="66_q6kfj"]
[ext_resource type="Texture2D" uid="uid://c6t1btk2curhg" path="res://img/barra de carga/carga_64.png" id="67_l18di"]
[ext_resource type="Texture2D" uid="uid://c8cjwago7fmdt" path="res://img/barra de carga/carga_65.png" id="68_2bbbu"]
[ext_resource type="Texture2D" uid="uid://dr4u0qomvha5s" path="res://img/barra de carga/carga_66.png" id="69_d3k3j"]
[ext_resource type="Texture2D" uid="uid://bu532qmxtumul" path="res://img/barra de carga/carga_67.png" id="70_dvywd"]
[ext_resource type="Texture2D" uid="uid://dgqj5orh78xow" path="res://img/barra de carga/carga_68.png" id="71_sedtm"]
[ext_resource type="Texture2D" uid="uid://c4auqjl2e1k4o" path="res://img/barra de carga/carga_69.png" id="72_2oflm"]
[ext_resource type="Texture2D" uid="uid://dlppyg83bfus4" path="res://img/barra de carga/carga_70.png" id="73_0j8lx"]
[ext_resource type="Texture2D" uid="uid://dd3q1cyay1cvn" path="res://img/barra de carga/carga_71.png" id="74_4j047"]
[ext_resource type="Texture2D" uid="uid://pirdg2v4s1hp" path="res://img/barra de carga/carga_72.png" id="75_18pma"]
[ext_resource type="Texture2D" uid="uid://cbcgqyr80dllw" path="res://img/barra de carga/carga_73.png" id="76_7ckri"]
[ext_resource type="Texture2D" uid="uid://biub13j40833f" path="res://img/barra de carga/carga_74.png" id="77_3jiee"]
[ext_resource type="Texture2D" uid="uid://64reg1clxhpx" path="res://img/barra de carga/carga_75.png" id="78_r4bbx"]
[ext_resource type="Texture2D" uid="uid://ctsu3sbko04wx" path="res://img/barra de carga/carga_76.png" id="79_7d1eb"]
[ext_resource type="Texture2D" uid="uid://daf5bgvvbc80b" path="res://img/barra de carga/carga_77.png" id="80_og2oh"]
[ext_resource type="Texture2D" uid="uid://wjhampi50ry2" path="res://img/barra de carga/carga_78.png" id="81_8lbq7"]
[ext_resource type="Texture2D" uid="uid://q5fhktuu6p0l" path="res://img/barra de carga/carga_79.png" id="82_wc2y3"]
[ext_resource type="Texture2D" uid="uid://fhcd8qux2ejb" path="res://img/barra de carga/carga_80.png" id="83_1feiq"]
[ext_resource type="Texture2D" uid="uid://cuv4xc655ys2j" path="res://img/barra de carga/carga_81.png" id="84_o80hg"]
[ext_resource type="Texture2D" uid="uid://b0necagrvp3d2" path="res://img/barra de carga/carga_82.png" id="85_18uvi"]
[ext_resource type="Texture2D" uid="uid://cidrchjl10rt2" path="res://img/barra de carga/carga_83.png" id="86_g4x2w"]
[ext_resource type="Texture2D" uid="uid://4qsxcgqybymx" path="res://img/barra de carga/carga_84.png" id="87_2lcer"]
[ext_resource type="Texture2D" uid="uid://b2bgxwbtbk6u3" path="res://img/barra de carga/carga_85.png" id="88_m4436"]
[ext_resource type="Texture2D" uid="uid://bpu7xgg56h653" path="res://img/barra de carga/carga_86.png" id="89_t13rt"]
[ext_resource type="Texture2D" uid="uid://bjbqmd2hdxjla" path="res://img/barra de carga/carga_87.png" id="90_jvx7p"]
[ext_resource type="Texture2D" uid="uid://bkxsh65svwh25" path="res://img/barra de carga/carga_88.png" id="91_14o66"]
[ext_resource type="Texture2D" uid="uid://mf8pjrl5e4rp" path="res://img/barra de carga/carga_89.png" id="92_ik3th"]
[ext_resource type="Texture2D" uid="uid://d16sk3jjyiwdc" path="res://img/barra de carga/carga_90.png" id="93_m7ndx"]
[ext_resource type="Texture2D" uid="uid://7inpr61g0huf" path="res://img/barra de carga/carga_91.png" id="94_qqto4"]
[ext_resource type="Texture2D" uid="uid://dyrlyiukejxuv" path="res://img/barra de carga/carga_92.png" id="95_3vgog"]
[ext_resource type="Texture2D" uid="uid://dyeh0etndcvst" path="res://img/barra de carga/carga_93.png" id="96_6wne7"]
[ext_resource type="Texture2D" uid="uid://vv8tb5qwy25y" path="res://img/barra de carga/carga_94.png" id="97_808vy"]
[ext_resource type="Texture2D" uid="uid://l1qvasjjslcr" path="res://img/barra de carga/carga_95.png" id="98_oa6k0"]
[ext_resource type="Texture2D" uid="uid://boybnoduowxbn" path="res://img/barra de carga/carga_96.png" id="99_byvm5"]
[ext_resource type="Theme" uid="uid://bm1ub45g4i7os" path="res://themes/ai_theme.tres" id="100_4joq7"]
[ext_resource type="Texture2D" uid="uid://cd55dl2r1xi7u" path="res://img/nucleo_02/actividad_04/otro.png" id="101_8mr0f"]
[ext_resource type="Texture2D" uid="uid://b26tvo25n7baq" path="res://img/nucleo_02/actividad_04/iphone_prop.png" id="102_43gsf"]
[ext_resource type="Texture2D" uid="uid://dgbfewfosjoo5" path="res://img/nucleo_02/actividad_04/iphone_select.png" id="103_2q8y8"]
[ext_resource type="Texture2D" uid="uid://c4eclgowb2wn6" path="res://img/nucleo_02/actividad_04/cyber.png" id="104_lqach"]
[ext_resource type="Texture2D" uid="uid://dojauipgm4lfm" path="res://img/nucleo_02/actividad_04/cyber_select.png" id="105_m755g"]
[ext_resource type="Texture2D" uid="uid://v64oqunecgdw" path="res://img/nucleo_02/actividad_04/resultado_cyber.png" id="106_tjxux"]
[ext_resource type="Texture2D" uid="uid://c5x8r4m7h5wly" path="res://img/nucleo_02/actividad_04/resultado_pro.png" id="107_oyu1r"]
[ext_resource type="PackedScene" uid="uid://c0pnxckwulqw5" path="res://scenes/actividades/presionar_anim.tscn" id="109_bhre5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yf4ja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_1gbjx")
}, {
"duration": 1.0,
"texture": ExtResource("5_b63mk")
}, {
"duration": 1.0,
"texture": ExtResource("6_etbfs")
}, {
"duration": 1.0,
"texture": ExtResource("7_3pavd")
}, {
"duration": 1.0,
"texture": ExtResource("8_juxsq")
}, {
"duration": 1.0,
"texture": ExtResource("9_y3165")
}, {
"duration": 1.0,
"texture": ExtResource("10_ogu2j")
}, {
"duration": 1.0,
"texture": ExtResource("11_4ngbo")
}, {
"duration": 1.0,
"texture": ExtResource("12_w8iey")
}, {
"duration": 1.0,
"texture": ExtResource("13_ugm63")
}, {
"duration": 1.0,
"texture": ExtResource("14_jabtp")
}, {
"duration": 1.0,
"texture": ExtResource("15_58x8u")
}, {
"duration": 1.0,
"texture": ExtResource("16_astjr")
}, {
"duration": 1.0,
"texture": ExtResource("17_ve613")
}, {
"duration": 1.0,
"texture": ExtResource("18_lda05")
}, {
"duration": 1.0,
"texture": ExtResource("19_mn86r")
}, {
"duration": 1.0,
"texture": ExtResource("20_ectjm")
}, {
"duration": 1.0,
"texture": ExtResource("21_4d1t1")
}, {
"duration": 1.0,
"texture": ExtResource("22_a4mr6")
}, {
"duration": 1.0,
"texture": ExtResource("23_2e147")
}, {
"duration": 1.0,
"texture": ExtResource("24_tn6x6")
}, {
"duration": 1.0,
"texture": ExtResource("25_quppm")
}, {
"duration": 1.0,
"texture": ExtResource("26_1vb5q")
}, {
"duration": 1.0,
"texture": ExtResource("27_v5ct4")
}, {
"duration": 1.0,
"texture": ExtResource("28_c5yar")
}, {
"duration": 1.0,
"texture": ExtResource("29_o61jg")
}, {
"duration": 1.0,
"texture": ExtResource("30_1rghs")
}, {
"duration": 1.0,
"texture": ExtResource("31_kvxyo")
}, {
"duration": 1.0,
"texture": ExtResource("32_8l6ly")
}, {
"duration": 1.0,
"texture": ExtResource("33_2ky5g")
}, {
"duration": 1.0,
"texture": ExtResource("34_gmqqi")
}, {
"duration": 1.0,
"texture": ExtResource("35_iyd2t")
}, {
"duration": 1.0,
"texture": ExtResource("36_0bmjw")
}, {
"duration": 1.0,
"texture": ExtResource("37_lclay")
}, {
"duration": 1.0,
"texture": ExtResource("38_vhdt4")
}, {
"duration": 1.0,
"texture": ExtResource("39_mv3qk")
}, {
"duration": 1.0,
"texture": ExtResource("40_x6hcm")
}, {
"duration": 1.0,
"texture": ExtResource("41_v0qyk")
}, {
"duration": 1.0,
"texture": ExtResource("42_u76mq")
}, {
"duration": 1.0,
"texture": ExtResource("43_8ggaa")
}, {
"duration": 1.0,
"texture": ExtResource("44_mjcae")
}, {
"duration": 1.0,
"texture": ExtResource("45_wdlwm")
}, {
"duration": 1.0,
"texture": ExtResource("46_msce3")
}, {
"duration": 1.0,
"texture": ExtResource("47_f8uvg")
}, {
"duration": 1.0,
"texture": ExtResource("48_mycib")
}, {
"duration": 1.0,
"texture": ExtResource("49_a6d75")
}, {
"duration": 1.0,
"texture": ExtResource("50_a7gqw")
}, {
"duration": 1.0,
"texture": ExtResource("51_mk0yp")
}, {
"duration": 1.0,
"texture": ExtResource("52_56542")
}, {
"duration": 1.0,
"texture": ExtResource("53_0rwxd")
}, {
"duration": 1.0,
"texture": ExtResource("54_x1xeb")
}, {
"duration": 1.0,
"texture": ExtResource("55_7q6ue")
}, {
"duration": 1.0,
"texture": ExtResource("56_axha3")
}, {
"duration": 1.0,
"texture": ExtResource("57_nc14i")
}, {
"duration": 1.0,
"texture": ExtResource("58_fdtqj")
}, {
"duration": 1.0,
"texture": ExtResource("59_6hcph")
}, {
"duration": 1.0,
"texture": ExtResource("60_08kph")
}, {
"duration": 1.0,
"texture": ExtResource("61_lxbdx")
}, {
"duration": 1.0,
"texture": ExtResource("62_8q5uf")
}, {
"duration": 1.0,
"texture": ExtResource("63_e5qwa")
}, {
"duration": 1.0,
"texture": ExtResource("64_h3b8i")
}, {
"duration": 1.0,
"texture": ExtResource("65_upayt")
}, {
"duration": 1.0,
"texture": ExtResource("66_q6kfj")
}, {
"duration": 1.0,
"texture": ExtResource("67_l18di")
}, {
"duration": 1.0,
"texture": ExtResource("68_2bbbu")
}, {
"duration": 1.0,
"texture": ExtResource("69_d3k3j")
}, {
"duration": 1.0,
"texture": ExtResource("70_dvywd")
}, {
"duration": 1.0,
"texture": ExtResource("71_sedtm")
}, {
"duration": 1.0,
"texture": ExtResource("72_2oflm")
}, {
"duration": 1.0,
"texture": ExtResource("73_0j8lx")
}, {
"duration": 1.0,
"texture": ExtResource("74_4j047")
}, {
"duration": 1.0,
"texture": ExtResource("75_18pma")
}, {
"duration": 1.0,
"texture": ExtResource("76_7ckri")
}, {
"duration": 1.0,
"texture": ExtResource("77_3jiee")
}, {
"duration": 1.0,
"texture": ExtResource("78_r4bbx")
}, {
"duration": 1.0,
"texture": ExtResource("79_7d1eb")
}, {
"duration": 1.0,
"texture": ExtResource("80_og2oh")
}, {
"duration": 1.0,
"texture": ExtResource("81_8lbq7")
}, {
"duration": 1.0,
"texture": ExtResource("82_wc2y3")
}, {
"duration": 1.0,
"texture": ExtResource("83_1feiq")
}, {
"duration": 1.0,
"texture": ExtResource("84_o80hg")
}, {
"duration": 1.0,
"texture": ExtResource("85_18uvi")
}, {
"duration": 1.0,
"texture": ExtResource("86_g4x2w")
}, {
"duration": 1.0,
"texture": ExtResource("87_2lcer")
}, {
"duration": 1.0,
"texture": ExtResource("88_m4436")
}, {
"duration": 1.0,
"texture": ExtResource("89_t13rt")
}, {
"duration": 1.0,
"texture": ExtResource("90_jvx7p")
}, {
"duration": 1.0,
"texture": ExtResource("91_14o66")
}, {
"duration": 1.0,
"texture": ExtResource("92_ik3th")
}, {
"duration": 1.0,
"texture": ExtResource("93_m7ndx")
}, {
"duration": 1.0,
"texture": ExtResource("94_qqto4")
}, {
"duration": 1.0,
"texture": ExtResource("95_3vgog")
}, {
"duration": 1.0,
"texture": ExtResource("96_6wne7")
}, {
"duration": 1.0,
"texture": ExtResource("97_808vy")
}, {
"duration": 1.0,
"texture": ExtResource("98_oa6k0")
}, {
"duration": 1.0,
"texture": ExtResource("99_byvm5")
}],
"loop": false,
"name": &"default",
"speed": 19.0
}]

[node name="Actividad04" type="Node2D"]
script = ExtResource("1_pvae5")

[node name="GooglIa" type="Sprite2D" parent="."]
position = Vector2(967, 1550)
texture = ExtResource("2_c64mc")

[node name="Tapa" type="Sprite2D" parent="GooglIa"]
position = Vector2(-116, -1134)
scale = Vector2(0.737037, 0.719298)
texture = ExtResource("3_vqexg")

[node name="Titila" parent="GooglIa" instance=ExtResource("4_mv8c7")]
position = Vector2(-166, -1180)
scale = Vector2(0.384988, 0.350467)
color = Color(0.913725, 0, 0.490196, 1)

[node name="BotonS" parent="GooglIa" instance=ExtResource("3_mcmjx")]
offset_left = -150.0
offset_top = -1165.0
offset_right = -22.0
offset_bottom = -1120.0
color = Color(0.909804, 0, 0.490196, 1)
texto = "BUSCAR"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GooglIa"]
visible = false
modulate = Color(0.909804, 0, 0.490196, 1)
position = Vector2(472, -914)
scale = Vector2(0.5, 0.454167)
sprite_frames = SubResource("SpriteFrames_yf4ja")

[node name="Label" type="Label" parent="GooglIa/AnimatedSprite2D"]
offset_left = -188.0
offset_top = -132.11
offset_right = 234.0
offset_bottom = -89.11
theme = ExtResource("100_4joq7")
theme_override_colors/font_color = Color(0.909804, 0, 0.490196, 1)
text = "GENERANDO RESULTADO..."

[node name="Label" type="Label" parent="GooglIa"]
offset_left = -812.0
offset_top = -1242.0
offset_right = -38.0
offset_bottom = -1199.0
theme = ExtResource("100_4joq7")
theme_override_colors/font_color = Color(0.909804, 0, 0.490196, 1)

[node name="Timer" type="Timer" parent="GooglIa/Label"]
wait_time = 0.2
autostart = true

[node name="Opciones" type="Node2D" parent="GooglIa"]
visible = false

[node name="Otro" type="Sprite2D" parent="GooglIa/Opciones"]
position = Vector2(-62.25, -965)
scale = Vector2(0.937956, 1)
texture = ExtResource("101_8mr0f")

[node name="Titila" parent="GooglIa/Opciones" instance=ExtResource("4_mv8c7")]
position = Vector2(-942, -1116)
scale = Vector2(1.0339, 1.39252)
color = Color(0.913725, 0, 0.490196, 1)

[node name="Titila2" parent="GooglIa/Opciones" instance=ExtResource("4_mv8c7")]
position = Vector2(-561, -1116)
scale = Vector2(1.034, 1.393)
color = Color(0.913725, 0, 0.490196, 1)

[node name="Iphone" type="TextureButton" parent="GooglIa/Opciones"]
offset_left = -904.0
offset_top = -1065.0
offset_right = -561.0
offset_bottom = -866.0
scale = Vector2(1.00668, 1.00668)
texture_normal = ExtResource("102_43gsf")
texture_pressed = ExtResource("103_2q8y8")
texture_hover = ExtResource("103_2q8y8")

[node name="Cyber" type="TextureButton" parent="GooglIa/Opciones"]
offset_left = -515.0
offset_top = -1065.0
offset_right = -172.0
offset_bottom = -866.0
texture_normal = ExtResource("104_lqach")
texture_pressed = ExtResource("105_m755g")
texture_hover = ExtResource("105_m755g")

[node name="ResultadoCyber" type="Sprite2D" parent="."]
visible = false
position = Vector2(1449, 604)
texture = ExtResource("106_tjxux")

[node name="ResultadoPro" type="Sprite2D" parent="."]
visible = false
position = Vector2(1447, 604)
texture = ExtResource("107_oyu1r")

[node name="Presionar" parent="." instance=ExtResource("109_bhre5")]
modulate = Color(0.909804, 0, 0.490196, 1)
position = Vector2(0, -23)

[node name="Titila" parent="." instance=ExtResource("4_mv8c7")]
visible = false
position = Vector2(1362, 877)
scale = Vector2(0.384988, 0.350467)
color = Color(0.913725, 0, 0.490196, 1)

[node name="BotonS" parent="." instance=ExtResource("3_mcmjx")]
visible = false
offset_left = 1378.0
offset_top = 892.0
offset_right = 1506.0
offset_bottom = 937.0
color = Color(0.909804, 0, 0.490196, 1)
texto = "ENVIAR"

[connection signal="button_down" from="GooglIa/BotonS" to="." method="_on_boton_s_button_down"]
[connection signal="animation_finished" from="GooglIa/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="GooglIa/Label/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GooglIa/Opciones/Iphone" to="." method="_on_iphone_pressed"]
[connection signal="pressed" from="GooglIa/Opciones/Cyber" to="." method="_on_cyber_pressed"]
[connection signal="pressed" from="BotonS" to="." method="_on_boton_s_pressed"]
